# clarify-rl

./: .dockerignore  .gitattributes  .gitignore  Blog.md  Dockerfile  README.md  SUBMISSION_CHECKLIST.md  __init__.py  client.py  conftest.py  inference.py  models.py  openenv.yaml  pyproject.toml
.windsurf/rules/: clarify-rl.md
data/: sample_traces.json
docs/: 00-overview.md  01-requirements.md  02-architecture.md  03-environment-spec.md  04-rubric-design.md  05-scenario-design.md  06-training-plan.md  07-deployment.md  08-timeline.md  09-risks.md  10-positioning.md  11-submission-plan.md  AGENT_ONBOARDING.md  ANURAG_TODO.md  README.md  SESSION_LOG.md  STATUS.md  blog.md  slides.md  trace_demo.md  trace_demo_run1.md
docs/model_cards/: run1-qwen3-0.6b-no-kl.md  run2-qwen3-1.7b-no-kl.md  run4-qwen3-1.7b-beta0.2.md
plots/: runs_summary.json
scenarios/: eval_held_out.json
scripts/: backfill_wandb.py  compare_runs.py  eval_with_vllm.py  generate_eval_set.py  launch_all.sh  launch_eval_job.sh  launch_hf_job.sh  make_plots.py  make_progression_plot.py  make_trace_demo.py  make_trace_demo_run1.py  monitor_training.py  poll_status.sh  poll_training.py  preflight.sh  refresh_all_plots.sh  run_eval.py  run_post_train_eval.sh  smoke_client.py  smoke_env.py  smoke_http.py  watch_and_eval.py
server/: __init__.py  app.py  clarify_environment.py  grader.py  gradio_ui.py  rubrics.py  scenarios.py  user_simulator.py
tests/: conftest.py  test_environment.py  test_grader.py  test_rubrics.py  test_scenarios.py  test_user_simulator.py
training/: train_grpo.ipynb  train_grpo.py
